Added Rails exam

--- a/EjercicioTiendaDiscos/app/assets/stylesheets/discos.css.scss
+++ b/EjercicioTiendaDiscos/app/assets/stylesheets/discos.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the discos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.par{
+    background-color: #E3F6F4;
+}
+  
+.impar{
+    background-color: #A9ECE5;
+}
